hphp/hack/test/typecheck/akshape/gena_error.php.exp
File "gena_error.php", line 17, characters 12-23:
Invalid argument (Typing[4110])
File "gena_error.php", line 11, characters 19-21:
This is an int
File "gena_error.php", line 7, characters 34-39:
It is incompatible with a string
